--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
   <div class="py-5">
     <div class="container">
-      <div class="row m-0 p-0 text-center text-lowercase">
+      <div class="row m-0 p-0 text-center text-lowercase w-100">
         <div class="col-md-4"></div>
         <div class="col-md-3 "><img src="logooooo.png" width="115px" height="45px" class="mx-auto img-fluid"></div>
         <div class="col-md-4 offset-md-1 text-center m-0 p-0 col-1 align-self-center"></div>
