--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   <div class="logo">
     <a href="ipkory home.html"> </a>
   </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row m-0 p-0 text-center text-lowercase w-100">
-        <div class="col-md-4"></div>
-        <div class="col-md-3 "><img src="logooooo.png" width="115px" height="45px" class="mx-auto img-fluid"></div>
-        <div class="col-md-4 offset-md-1 text-center m-0 p-0 col-1 align-self-center"></div>
+  <nav class="navbar navbar-expand-md navbar-light bg-faded">
+    <a class="navbar-brand px-5 mx-5" href="#"><img src="logooooo.png" width="115px" height="45px" class="p-0 m-0"></a>
+    <div class="container-fluid"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+               </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ">
+          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item bg-faded"> <a class="nav-link active" href="#">Link</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="#">Disabled</a> </li>
+        </ul>
       </div>
     </div>
-  </div>
+  </nav>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
