Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="index.css" type="text/css"> </head>
+  <link rel="stylesheet" href="index.css" type="text/css">
+  <title>ipkory</title>
+  <link rel="icon" href="icon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito"> </head>
 
 <body class="">
   <div class="logo">
     <a href="ipkory home.html"> </a>
   </div>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded">
-    <a class="navbar-brand px-5 mx-5" href="#"><img src="logooooo.png" width="115px" height="45px" class="p-0 m-0"></a>
+  <nav class="navbar navbar-expand-md navbar-light bg-faded p-2 mx-auto">
+    <a class="navbar-brand px-5 mx-5" href="#"><img src="logooooo.png" width="115px" height="45px" class="p-0 m-0 float-left img-fluid"></a>
     <div class="container-fluid"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
