--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <div class="logo">
     <a href="ipkory home.html"> </a>
   </div>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded p-2 mx-auto">
-    <a class="navbar-brand px-5 mx-5" href="#"><img src="logooooo.png" width="115px" height="45px" class="p-0 m-0 float-left img-fluid"></a>
-    <div class="container-fluid"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-md navbar-light bg-faded">
+    <a class="navbar-brand" href="#"><img src="logooooo.png" width="115px" height="45px" class="m-0 float-left img-fluid py-1"></a>
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item bg-faded"> <a class="nav-link active" href="#">Link</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="#">Link</a> </li>
           <li class="nav-item"> <a class="nav-link active" href="#">Disabled</a> </li>
         </ul>
       </div>
