--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav text-white text-center p-0">
           <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link active" href="#">Link</a> </li>
           <li class="nav-item"> <a class="nav-link active" href="#">Disabled</a> </li>
