--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav text-white text-center p-0">
           <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link active" href="#">Link</a> </li>
