Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -13,20 +13,38 @@
   <div class="logo">
     <a href="ipkory home.html"> </a>
   </div>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded">
+  <nav class="navbar navbar-expand-md navbar-light">
     <a class="navbar-brand" href="#"><img src="logooooo.png" width="115px" height="45px" class="m-0 float-left img-fluid py-1"></a>
     <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav text-white text-center p-0">
-          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="#">Link</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="#">Disabled</a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Terbaru</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="#">Terpopuler</a> </li>
+          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Artikel <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#" class="dropdown-item">Buku</a></li>
+              <li><a href="#" class="dropdown-item">Musik</a></li>
+              <li><a href="#" class="dropdown-item" a="">Film</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="btn-group"> <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Dropdown </button>
+            <div class="dropdown-menu"> <a class="dropdown-item" href="#">Action</a>
+              <div class="dropdown-divider"></div> <a class="dropdown-item" href="#">Separated link</a> </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
