--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav text-white text-center p-0">
-          <li class="nav-item active"> <a class="nav-link" href="#">Terbaru</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="#">Terpopuler</a> </li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Artikel <span class="caret"></span></a>
+        <ul class="navbar-nav text-center p-0">
+          <li class="nav-item active"> <a href="#" class="px-2">Terbaru</a> </li>
+          <li class="nav-item"> <a href="#" class="px-2">Terpopuler</a> </li>
+          <li class="dropdown"> <a href="#" class="dropdown-toggle px-2" data-toggle="dropdown" role="button">Kategori <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#" class="dropdown-item">Buku</a></li>
               <li><a href="#" class="dropdown-item">Musik</a></li>
@@ -33,18 +33,6 @@
       </div>
     </div>
   </nav>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="btn-group"> <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Dropdown </button>
-            <div class="dropdown-menu"> <a class="dropdown-item" href="#">Action</a>
-              <div class="dropdown-divider"></div> <a class="dropdown-item" href="#">Separated link</a> </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
