Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito"> </head>
 
 <body class="">
-  <div class="logo">
-    <a href="ipkory home.html"> </a>
-  </div>
-  <nav class="navbar navbar-expand-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light text-center py-1">
     <a class="navbar-brand" href="#"><img src="logooooo.png" width="115px" height="45px" class="m-0 float-left img-fluid py-1"></a>
     <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav text-center p-0">
-          <li class="nav-item active"> <a href="#" class="px-2">Terbaru</a> </li>
+          <li class="nav-item"> <a href="#" class="px-2">Terbaru</a> </li>
           <li class="nav-item"> <a href="#" class="px-2">Terpopuler</a> </li>
           <li class="dropdown"> <a href="#" class="dropdown-toggle px-2" data-toggle="dropdown" role="button">Kategori <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#" class="dropdown-item">Buku</a></li>
               <li><a href="#" class="dropdown-item">Musik</a></li>
-              <li><a href="#" class="dropdown-item" a="">Film</a></li>
+              <li><a href="#" class="dropdown-item">Film</a></li>
             </ul>
           </li>
         </ul>
