--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body class="">
   <nav class="navbar navbar-expand-md navbar-light text-center py-1">
-    <a class="navbar-brand" href="#"><img src="logooooo.png" width="115px" height="45px" class="m-0 float-left img-fluid py-1"></a>
+    <a class="navbar-brand" href="#"><img src="logooooo.png" width="115px" height="45px" class="py-1 img-fluid mx-3"></a>
     <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav text-center p-0">
+        <ul class="navbar-nav list-unstyled mx-0 px-0 text-center">
           <li class="nav-item"> <a href="#" class="px-2">Terbaru</a> </li>
           <li class="nav-item"> <a href="#" class="px-2">Terpopuler</a> </li>
           <li class="dropdown"> <a href="#" class="dropdown-toggle px-2" data-toggle="dropdown" role="button">Kategori <span class="caret"></span></a>
