Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </ul>
       </div>
     </div>
+    <form class="form-inline">
+      <div class="form-group"> <input type="search" class="form-control" placeholder="Cari.."> </div> <button type="search" class="btn btn-primary">Cari</button> </form>
   </nav>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
